--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Currency App</string>
+    <string name="action_settings">Settings</string>
+    <string name="currency_prompt">Select service frequency</string>
+
+    <string-array name="currency_time">
+        <item>Repeat every minute</item>
+        <item>Repeat every two minutes</item>
+        <item>Repeat every five minutes</item>
+        <item>Repeat every twenty minutes</item>
+        <item>Repeat every hour</item>
+        <item>Repeat every day</item>
+        <item>Off</item>
+    </string-array>
 </resources>
